<resources>
    <!--bottom_menu.xml-->
    <string name="app_name">Shopping List</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shopping_list">Shopping list</string>
    <string name="new_item">New</string>

    <!--activity_new_note.xml-->
    <string name="ed_title_hint">Title</string>
    <string name="et_description">Description</string>

    <!--new_list_dialog.xml-->
    <string name="new_list_name">New list name</string>
    <string name="list_name">List name</string>
    <string name="create_list">Create List</string>
    <string name="update_list">Update List</string>

    <!--delete_dialog.xml-->
    <string name="you_want_to_delete_this_list">You want to delete this list?</string>
    <string name="delete_item">Delete item</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>

    <!--shopping_list_menu.xml-->
    <string name="delete_shopping_list">Delete List</string>
    <string name="clear_shopping_list">Clear List</string>
    <string name="share_shopping_list">Share List</string>
    <string name="new_shopping_list">New Shopping List</string>
    <string name="save_shopping_list">Save Shopping List</string>

    <!--edit_action_layout.xml-->
    <string name="new_list_item">New item</string>

    <!--activity_shopping_list.xml-->
    <string name="shopping_list_empty">Empty</string>

    <!--edit_shopping_list_dialog.xml-->
    <string name="list_info">List info</string>
    <string name="update_list_item">Update</string>

    <!--settings_preference.xml-->
    <string name="general">General</string>
    <string name="chose_note_style">Chose note style</string>
    <string name="chose_time_format">Chose time format</string>
    <string name="theme_style">Theme settings</string>
    <string name="chose_theme">Chose theme</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="title_text_settings">Title text size</string>
    <string name="content_text_settings">Content text size</string>

    <!--settings_preference.xml______KEYS-->
    <string name="default_note_title_size">18</string>
    <string name="default_note_content_size">16</string>
    <string name="new_note_save">Save</string>
    <string name="new_note_bold">Bold</string>
    <string name="new_note_color">Color</string>
    <string name="pref_theme_key">theme_key</string>


</resources>