<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/note_styles_array"
            android:entryValues="@array/note_styles_values"
            android:icon="@drawable/ic_style_preference"
            android:key="note_style_key"
            android:title="@string/chose_note_style"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:icon="@drawable/ic_time_preference"
            android:key="time_format_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_time_format" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme_style">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/theme_array"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/ic_theme_preference"
            android:key="theme_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_title_size_preference"
            android:key="title_text_size_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/title_text_settings" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_content_size_preference"
            android:key="content_text_size_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/content_text_settings" />
    </PreferenceCategory>
</PreferenceScreen>