<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_bottom_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notes"
        android:icon="@drawable/ic_bottom_note"
        android:title="@string/notes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/shopping_list"
        android:icon="@drawable/ic_bottom_list"
        android:title="@string/shopping_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/new_item"
        android:icon="@drawable/ic_bottom_new"
        android:title="@string/new_item"
        app:showAsAction="ifRoom" />

</menu>