<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/note_menu_save"
        android:icon="@drawable/ic_menu_save"
        android:orderInCategory="9"
        android:title="@string/new_note_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/note_menu_bold"
        android:icon="@drawable/ic_menu_bold"
        android:orderInCategory="2"
        android:title="@string/new_note_bold"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/note_menu_color_picker"
        android:icon="@drawable/ic_menu_color_picker"
        android:orderInCategory="1"
        android:title="@string/new_note_color"
        app:showAsAction="ifRoom" />

</menu>