<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_layer_border_background"
    android:backgroundTint="@null"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_shopping_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/delete_item"
        android:textColor="?attr/textColorItems"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_edit_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_want_to_delete_this_list"
        android:textColor="?attr/textColorItems" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dtn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="50"
            android:backgroundTint="?attr/buttonBackgroundColor"
            android:scrollbarSize="0dp"
            android:text="@string/btn_cancel"
            android:textColor="?attr/textColorItems"
            android:textSize="12sp" />

        <Button
            android:id="@+id/dtn_delete_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="50"
            android:backgroundTint="?attr/buttonBackgroundColor"
            android:scrollbarSize="0dp"
            android:text="@string/btn_delete"
            android:textColor="?attr/textColorItems"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>