<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_layer_border_background"
    android:backgroundTint="@null"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_shopping_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/new_list_name"
        android:textColor="?attr/textColorItems"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_edit_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/edittext_layer_border_background"
        android:backgroundTint="@null"
        android:ems="10"
        android:hint="@string/list_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="?attr/textColorItems"
        android:textColorHint="?attr/editTextColor"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btn_edit_shopping_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/create_list"
        android:textColor="?attr/textColorItems"
        android:textSize="12sp" />
</LinearLayout>